client/css/dashboard.css
main {
	display: grid !important;
	grid-template-columns: 220px calc(100% - 220px);
}
main.collapsed-grid {
	grid-template-columns: 60px calc(100% - 60px) !important;
}
main label {
	font-weight: normal;
}
main > nav {
	display: flex;
	flex-direction: column;
	position: sticky;
	top: 0;
	overflow-y: auto;
	z-index: 5;
	height: calc(100vh - 50px);
	height: 100vh;
	background: var(--color-primary);
	color: var(--color-primary-text);
}
	main > nav .dashboard-search input {
		background: rgba(255, 255, 255, 0.1) !important;
		border: 0 !important;
		width: 100%;
		height: 35px !important;
		color: #fff;
		outline: none;
	}
	main > nav .collapse {
		margin-top: auto;
	}
		main > nav .collapse .name {
			color: #ccc;
			margin: 0 auto;
		}
	nav.collapsed {
		overflow: unset;
	}
main > nav.collapsed .dashboard-search {
	display: none;
}
main > nav.collapsed .selected {
	box-shadow: none !important;
	background: var(--color-accent) !important;
}
	nav.collapsed > .item {
		position: relative;
	}
	nav.collapsed > .item > .submenu {
		position: absolute;
		left: 100%;
		width: 180px;
		top: 0;
		background: var(--color-primary);
		box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
	}
		nav > .item > .collapsed-submenu-bar .label {
			padding-left: 10px;
		}
		nav > .item > .collapsed-submenu-bar .submenu .label {
			padding-left: 40px;
		}
		nav > .item .left span {
			padding: 0 5px;
		}
		nav > .item.list-open {
			box-shadow: inset 10px 0px 0 var(--color-accent);
		}
main > nav::-webkit-scrollbar {
	background: var(--color-secondary);
	width: 8px;
}
main > nav::-webkit-scrollbar-thumb {
	background: var(--color-accent);
}
main > nav::-webkit-scrollbar-track {
	box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
}
	main > nav .NA {
		text-align: center;
		padding: 20px;
	}
		main > nav .NA svg {
			font-size: 175%;
		}
	main > nav .label {
		display: flex;
		padding: 12px;
		align-items: center;
		border-radius: 0;
		font: inherit;
		vertical-align: inherit;
		color: var(--color-primary-text);
		transition: background var(--transition-duration),
					box-shadow var(--transition-duration);
	}
	main > nav .label:hover {
		text-decoration: none;
		background: rgba(0, 0, 0, 0.3);
	}
	main > nav .label:active {
		box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.3);
	}
	main > nav .label.selected {
		background: rgba(0, 0, 0, 0.3);
		box-shadow: inset 5px 0px 0 var(--color-accent);
	}
		main > nav .submenu .label {
			padding-left: 40px;
		}
		main > nav .submenu .submenu .label {
			padding-left: 60px;
		}
		main > nav .submenu .submenu .submenu .label {
			padding-left: 90px;
		}
			main > nav .item .label .name {
				margin-left: 8px;
			}
			main > nav .item .label .angle {
				transition: transform var(--transition-duration);
				margin-left: auto;
			}
			main > nav .item .label .angle.down {
				transform: rotate(90deg);
			}
	main > nav footer {
		display: flex;
		justify-content: space-between;
		margin-top: auto;
		background: var(--color-primary);
	}
		.collapsed-grid .collapse-panel {
			display: flex;
			padding: 12px 0;
			justify-content: center;
			width: 100%;
			color: #fff;
		}
	 	main > nav footer .collapse-panel {
			display: flex;
			padding: 12px 0;
			justify-content: center;
			align-items: center;
			width: 50px;
		}
		main > nav footer .collapse-panel:hover {
			cursor: pointer;
			background: rgba(0, 0, 0, 0.15)
		}
		main > nav footer .powered-by {
			font-size: 80%;
			color: #ccc;
			letter-spacing: 0.5px;
			padding: 12px;
		}
			main > nav footer .powered-by a {
				color: var(--color-primary-text);
			}
main #mailto.selected {
	background: var(--color-accent);
	color: var(--color-accent-text);
	border-color: var(--color-accent);
}
main .mailto-content {
	background: #fff;
	align-items: end;
	margin-bottom: calc(var(--gap) * 2);
	position: sticky;
	top: 45px;
	z-index: 10;
	grid-template-columns: max-content max-content max-content max-content;
	box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
	grid-gap: calc(var(--gap) * 2);
}
main #reports > .datasets {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	position: fixed;
	right: 0px;
	top: 50px;
	bottom: 0;
	background: #fff;
	padding: 0 calc(var(--gap) * 2);
	box-shadow:  0 0 25px rgba(0, 0, 0, 0.15);
	z-index: 6;
	width: 260px;
	align-items: flex-start;
	overflow: auto;
	opacity: 0;
	transform: translateX(260px);
	transition: transform var(--transition-duration),
				opacity var(--transition-duration);
}

main #reports > .datasets.show {
	transform: translateX(0px);
	opacity: 1;
}

	main #reports > .datasets h3 {
		margin: 0 0 10px;
		border-bottom: 1px dashed #999;
		font-size: 95%;
		padding: calc(var(--gap)* 2) 0;
		background: #fff;
		width: 100%;
		position: sticky;
		letter-spacing: 0.5px;
		top: 0;
		z-index: 1;
	}
		main #reports > .datasets h3 svg {
			color: #999;
		}
	main #reports > .datasets .dataset-container {
		grid-column: 1;
		width: 100%;
		max-width: 100%;
		margin-bottom: calc(var(--gap) * 2);
	}
	main #reports > .datasets .dataset-container:last-of-type {
		margin-bottom: 0;
	}
	main #reports > .datasets .actions {
		display: grid;
		grid-auto-flow:  column;
		grid-gap: calc(var(--gap) * 2);
		grid-column: auto / span 2;
		margin-top: auto;
		position: sticky;
		background: #fff;
		bottom: 0px;
		width: 100%;
		padding: calc(var(--gap) * 2) 0;
	}
		main #reports > .datasets .actions .icon svg {
			margin: 0;
		}

main #reports > .list {
	display: grid;
	grid-template-columns: repeat(32, 1.25fr);
	grid-auto-rows: calc(50px - (var(--gap) * 4));
	grid-column-gap: calc(var(--gap) * 2);
	grid-row-gap: calc(var(--gap) * 4);
	align-items: start;
}
	main #reports > .list .NA.no-reports {
		grid-column: 1 / span all;
	}
	main #reports > .toolbar {
		position: sticky;
		top: 0;
		z-index: 5;
		align-items: flex-end;
	}
		main #reports > .toolbar input[name=date-range] {
			width: 250px;
			text-align: center;
			letter-spacing: 0.5px;
		}
		main #reports > .toolbar label select {
			max-width: 200px;
		}
	main #reports .list .data-source {
		grid-column: auto / span 16;
		grid-row: auto / span 2;
		position: relative;
		transition: grid-column 300ms;
		transition: box-shadow var(--transition-duration),
					opacity var(--transition-duration),
					border var(--transition-duration);
	}
	main #reports .list .data-source header .edit {
		display: grid;
		grid-auto-flow: column;
		grid-gap: calc(var(--gap) * 2);
	}
	main #reports .list .data-source.being-dragged {
		opacity: 0.5;
	}
	main #reports .list .data-source.drag-enter {
		box-shadow: -6px 0px var(--color-accent);
	}

	main #reports .side {
		position: absolute;
		bottom: 18px;
		right: 18px;
		width: 40px;
		height: 40px;
		border-radius: 20px;
		background: var(--color-accent);
		color: var(--color-accent-text);
		z-index: 6;
		display: flex;
		justify-content: center;
		align-items: center;
		transition: right var(--transition-duration),
					background var(--transition-duration);
	}
	main #reports .side:hover {
		border: 1px solid #999;
	}
	main #reports .side.selected {
		border: 3px solid #fff;
		color: #fff;
	}
	main #reports .side.show:focus {
		outline: 0;
	}
	main #reports .side.show {
		right: 275px;
	}
		main #reports .side > svg {
			margin-right: 0px;
		}

	main #reports .list .data-source .resize.right {
		position: absolute;
		cursor: col-resize;
		width: 5px;
		height: 40px;
		right: 0;
		top: calc(50% - 20px);
		z-index: 10;
		border-right: 3px double #aaa;
	}
	main #reports .list .data-source .resize.bottom {
		position: absolute;
		cursor: row-resize;
		width: 40px;
		height: 5px;
		bottom: 0;
		left: calc(50% - 20px);
		z-index: 10;
		border-bottom: 3px double #aaa;
	}
	main .data-source.add-new {
		cursor: pointer;
		border: 3px dashed #ccc;
		display: flex;
		justify-content: center;
		align-items: center;
		height: 500px;
		font-size: 200%;
		color: #999;
		transition: background var(--transition-duration),
					box-shadow var(--transition-duration);
	}
	main .data-source.add-new:hover {
		background: #ddd;
	}
	main .data-source.add-new:active {
		box-shadow: inset 0 0 250px rgba(0, 0, 0, 0.15);
	}
		main #reports .list.singleton {
			display: initial;
		}
		main .singleton .data-source .visualization {
			max-height: 480px;
		}
		main .singleton .data-source .visualization.table {
			max-height: calc(100vh - 270px);
		}

main #reports > .NA {
	text-align: center;
}
main #reports #blanket{
	background: rgba(0, 0, 0, 0.25);
	position: absolute;
	bottom: 0;
	right: 0;
	top: 0;
	left: 0;
	z-index: 5;
}

.daterangepicker .range_inputs {
	display: flex;
}
	.daterangepicker input {
		border-radius: 0 !important;
	}
	.daterangepicker button {
		color: #333 !important;
		border-radius: 0;
		flex: 1;
		display: flex;
		align-items: center;
		justify-content: center;
		letter-spacing: 1px;
		font-size: 11px !important;
	}
	.daterangepicker .ranges li {
		border-radius: 0;
	}

